version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/CDB/CommandLayer.rst.txt
.. vale off



:class:`CommandLayer`
=====================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.CDB.CommandLayer(iLayer: Ansys.Common.Interop.FEParsePlugin_ANSYS.ILayer)

   Bases: :py:obj:`object`


   
   Represents a layer associated to a shell SECBLOCK command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CommandLayer

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Mat`
            - Gets the material number.
          * - :py:attr:`~Numpt`
            - Gets the number of integration points in the layer.
          * - :py:attr:`~Theta`
            - Gets the layer orientation angle.
          * - :py:attr:`~Thick`
            - Gets the thickness.







Property detail
---------------
.. py:property:: Mat
   :type: Optional[int]


   
   Gets the material number.
















   ..
       !! processed by numpydoc !!

.. py:property:: Numpt
   :type: Optional[int]


   
   Gets the number of integration points in the layer.
















   ..
       !! processed by numpydoc !!

.. py:property:: Theta
   :type: Optional[float]


   
   Gets the layer orientation angle.
















   ..
       !! processed by numpydoc !!

.. py:property:: Thick
   :type: Optional[float]


   
   Gets the thickness.
















   ..
       !! processed by numpydoc !!







.. vale on